Use paper-dialog instead of nuxeo-dialog

--- a/arender-viewer-core/src/main/resources/web/nuxeo.war/ui/webui-arender-bundle.html
+++ b/arender-viewer-core/src/main/resources/web/nuxeo.war/ui/webui-arender-bundle.html
@@ -19,9 +19,9 @@
         </style>
 
         <paper-icon-button icon="icons:chrome-reader-mode" on-tap="_toggle"></paper-icon-button>
-        <nuxeo-dialog id="dialog" auto-fit-on-attach="true">
+        <paper-dialog id="dialog" auto-fit-on-attach="true">
           <iframe id="arender" frameborder="0" scrolling="no" onload="updateHeight(this)"></iframe>
-        </nuxeo-dialog>
+        </paper-dialog>
       </template>
       <script>
         function updateHeight(tep) {
